2004-04-26  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that :ext: no longer relies on an external transport with
	a GNU argument processor.

2004-04-26  Derek Price  <derek@ximbiot.com>

	* cvsnt.dsp: Add ls.c & stdbool.h as dependencies.
	* cvsnt.dep, cvsnt.mak: Regenerated.

2004-04-23  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new cvs ls subcommand.
	(Thanks for patches from Mark D Baushke <mdb@cvshome.org>
	& Alexander Taler <dissent@cvshome.org>.)

2004-04-23  Derek Price  <derek@ximbiot.com>

	* cvsnt.dep, cvsnt.mak: Back out previous change.

2004-04-23  Derek Price  <derek@ximbiot.com>

	* cvsnt.dep, cvsnt.mak: Regenerated.

2004-04-21  Derek Price  <derek@ximbiot.com>

	Add stdbool module from GNULIB.

	* HACKING: Note availability of stdbool, fnmatch, alloca & GNULIB
	substitutes in general.
	* configure.in: Call AM_STDBOOL_H.
	* srclist.txt: Add stdbool.
	* aclocal.m4, configure, config.h.in, Makefile.in: Regenerated.

2004-04-20  Derek Price  <derek@ximbiot.com>

	* NEWS: Note XP directory deletion fix.

2004-04-19  Derek Price  <derek@ximbiot.com>

	* cvsnt.mak: Regenerated for "zlib/libz.dsp" change.
	(Patch from Conrad T. Pino <Conrad@Pino.com>.)

2004-04-17  Derek Price  <derek@ximbiot.com>

	* cvsnt.dsw, cvsnt.dsp: Rename "lib/lib.*" to "lib/libcvs.*" and
	"zlib/zlib.*" to "zlib/libz.*".
	* cvsnt.dep, cvsnt.mak: Regenerated.
	(Patch from Conrad T. Pino <Conrad@Pino.com>.)

2004-04-16  Derek Price  <derek@ximbiot.com>

	* NEWS: Correct CVS name for piped checkout issue now that we have one.

2004-04-15  Derek Price  <derek@ximbiot.com>

	* cvsnt.dsp: Set PROP BASE directories to projet standard,
	synchronize ADD BASE statements with ADD counter part,
	remove child note property overrides which taken together
	reduce file size and "Reset" function uses project defaults.
	Place project libraries first in link library order.
	* cvsnt.mak: Regenerated for cvsnt.dsp change.
	(Patch from Conrad T. Pino <Conrad@Pino.com>.)
