@@ -218,6 +218,7 @@ AM_GNU_GETTEXT_VERSION dnl work around for autoconf-2.57 bug.
 AM_STDBOOL_H
 UTILS_FUNC_MKSTEMP
 gl_C_RESTRICT
+gl_DIRNAME
 gl_EXITFAIL
 gl_FUNC_ALLOCA
 gl_FUNC_ATEXIT
