@@ -49,6 +49,13 @@ $GNULIB/m4/alloca.m4				m4		no NI
 # $GNULIB/modules/atexit
 $GNULIB/lib/atexit.c				lib		no NI
 $GNULIB/m4/atexit.m4				m4		no NI
+# $GNULIB/modules/dirname
+$GNULIB/lib/basename.c				lib		no NI
+$GNULIB/lib/dirname.c				lib		no NI
+$GNULIB/lib/dirname.h				lib		no NI
+$GNULIB/lib/stripslash.				lib		no NI
+$GNULIB/m4/dirname.m4				m4		no NI
+$GNULIB/m4/dos.m4				m4		yes NI
 # $GNULIB/modules/exit
 $GNULIB/lib/exit.h				lib		no NI
 # $GNULIB/modules/exitfail
