@@ -1,3 +1,11 @@
+2004-04-27  Derek Price  <derek@ximbiot.com>
+
+	Add dirname module from GNULIB.
+
+	* configure.in: Use gl_DIRNAME.
+	* srclist.txt (dirname): New module.
+	* Makefile.in, aclocal.m4, config.h.in, configure: Regenerated.
+
 2004-04-26  Derek Price  <derek@ximbiot.com>
 
 	* NEWS: Note that :ext: no longer relies on an external transport with
